--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,6 @@
               </div>
               <div class="brand-text">
                 <h1>One Million Green Entities</h1>
-                <span class="brand-tagline"
-                  >Connecting sustainability worldwide</span
-                >
               </div>
             </div>
           </a>
@@ -532,20 +529,15 @@
           <!-- Brand Section -->
           <div class="footer-section footer-brand">
             <div class="footer-logo">
-              <div class="footer-logo-grid">
-                <div class="footer-pixel"></div>
-                <div class="footer-pixel"></div>
-                <div class="footer-pixel"></div>
-                <div class="footer-pixel"></div>
-                <div class="footer-pixel"></div>
-                <div class="footer-pixel"></div>
+              <div class="logo-grid">
+                <div class="logo-pixel"></div>
+                <div class="logo-pixel"></div>
+                <div class="logo-pixel"></div>
+                <div class="logo-pixel"></div>
               </div>
               <div class="footer-brand-text">
                 <h3>One Million Green Entities</h3>
-                <p>
-                  Building a global network of environmentally conscious
-                  organizations, one pixel at a time.
-                </p>
+                <p>Green Entities. Real Impact</p>
               </div>
             </div>
           </div>
@@ -631,7 +623,7 @@
           </div>
           <div class="footer-legal">
             <p>
-              &copy; 2024 One Million Green Entities. Building a sustainable
+              &copy; 2025 One Million Green Entities. Building a sustainable
               digital community.
             </p>
           </div>
