--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <title>One Million Green Entities</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="images/favicon.ico" />
   </head>
   <body>
     <!-- Loading screen -->
