--- a/initiative.html
+++ b/initiative.html
@@ -14,6 +14,7 @@
     <title>The Initiative - One Million Green Entities</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="initiative.css" />
+    <link rel="icon" href="images/favicon.ico" />
   </head>
   <body>
     <!-- Navigation -->
