--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
     <title>Contact Us - One Million Green Entities</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="contact.css" />
+    <link rel="icon" href="images/favicon.ico" />
   </head>
   <body>
     <!-- Navigation -->
