--- a/initiative.html
+++ b/initiative.html
@@ -366,14 +366,15 @@
         <div class="section-container">
           <div class="image-content">
             <img
-              src="images/data_1.jpg"
+              src="images/first_project.jpg"
               alt="Supporting immigrant communities"
             />
           </div>
           <div class="text-content">
-            <h2>
-              Our First Project: Empowering Immigrant Communities Through Food
-            </h2>
+            <h2 style="margin-bottom: 0">Our First Project:</h2>
+            <h3 style="font-size: 1.3rem; margin-top: 0">
+              Empowering Immigrant Communities Through Food
+            </h3>
             <p>
               Our inaugural social project launches a community catering and
               kitchen initiative that transforms lives while serving delicious,
@@ -401,19 +402,19 @@
               </li>
             </ul>
 
-            <h4>The Journey Ahead</h4>
+            <h3>The Journey Ahead</h3>
 
             <p>
-              <strong>Launch Trigger:</strong> This project activates once we
-              hit our cell sales milestone - ensuring every euro raised creates
-              maximum impact.
+              <strong style="color: rgb(70, 70, 70)">Launch Trigger:</strong>
+              This project activates once we hit our cell sales milestone -
+              ensuring every euro raised creates maximum impact.
             </p>
 
             <p>
-              <strong>Beyond Day One:</strong> This isn't just about one
-              kitchen. It's about proving that digital platforms can fuel
-              real-world change, creating a blueprint for communities
-              everywhere.
+              <strong style="color: rgb(70, 70, 70)">Beyond Day One:</strong>
+              This isn't just about one kitchen. It's about proving that digital
+              platforms can fuel real-world change, creating a blueprint for
+              communities everywhere.
             </p>
 
             <h3>Why This Matters</h3>
@@ -424,7 +425,7 @@
               charity - it's opportunity.
             </p>
             <p>
-              <strong>
+              <strong style="color: rgb(70, 70, 70)">
                 Ready to be part of the change? Secure your cell and help us
                 cook up something extraordinary.</strong
               >
