--- a/initiative.html
+++ b/initiative.html
@@ -84,7 +84,13 @@
     <div class="main-content initiative-content">
       <!-- What the Initiative Is About Section -->
       <section class="content-section animate-on-scroll">
-        <div class="section-container">
+        <div class="section-container section-container-special">
+          <div class="image-content">
+            <img
+              src="images/initiative_about.jpg"
+              alt="Global network of green entities"
+            />
+          </div>
           <div class="text-content">
             <h2>What the Initiative Is About</h2>
             <p>
@@ -116,13 +122,9 @@
               to showcase your green business and support social projects for
               immigrants.
             </p>
-            <a href="contact.html" class="cta-button">Join Our Initiative</a>
-          </div>
-          <div class="image-content">
-            <img
-              src="images/initiative_1.jpg"
-              alt="Global network of green entities"
-            />
+            <div style="text-align: center">
+              <a href="contact.html" class="cta-button">Join Our Initiative</a>
+            </div>
           </div>
         </div>
       </section>
@@ -194,6 +196,12 @@
       <!-- Our Vision Section -->
       <section class="content-section animate-on-scroll">
         <div class="section-container">
+          <div class="image-content">
+            <img
+              src="images/mission.jpg"
+              alt="Vision of global sustainability"
+            />
+          </div>
           <div class="text-content">
             <h2>Our Mission</h2>
             <p>
@@ -224,12 +232,6 @@
               </li>
             </ul>
           </div>
-          <div class="image-content">
-            <img
-              src="images/initiative_3.jpg"
-              alt="Vision of global sustainability"
-            />
-          </div>
         </div>
       </section>
 
@@ -237,7 +239,10 @@
       <section class="content-section reverse animate-on-scroll">
         <div class="section-container">
           <div class="image-content">
-            <img src="images/data_0.jpg" alt="Entity verification process" />
+            <img
+              src="images/entities_green.jpg"
+              alt="Entity verification process"
+            />
           </div>
           <div class="text-content">
             <h2>How We Select Entities</h2>
