--- a/initiative.html
+++ b/initiative.html
@@ -133,10 +133,7 @@
       <section class="content-section reverse animate-on-scroll">
         <div class="section-container">
           <div class="image-content">
-            <img
-              src="images/initiative_2.jpg"
-              alt="The beginning of our journey"
-            />
+            <img src="images/mission.jpg" alt="The beginning of our journey" />
           </div>
           <div class="text-content">
             <h2>The Story of the Initiative</h2>
@@ -198,7 +195,7 @@
         <div class="section-container">
           <div class="image-content">
             <img
-              src="images/mission.jpg"
+              src="images/fingerprint.jpg"
               alt="Vision of global sustainability"
             />
           </div>
