--- a/initiative.html
+++ b/initiative.html
@@ -133,7 +133,7 @@
       <section class="content-section reverse animate-on-scroll">
         <div class="section-container">
           <div class="image-content">
-            <img src="images/mission.jpg" alt="The beginning of our journey" />
+            <img src="images/forest.jpeg" alt="The beginning of our journey" />
           </div>
           <div class="text-content">
             <h2>The Story of the Initiative</h2>
