Update social links

--- a/contact.html
+++ b/contact.html
@@ -545,7 +545,7 @@
             <h4>Connect</h4>
             <div class="social-links">
               <a
-                href="https://www.instagram.com/milion.green.entities/"
+                href="https://www.instagram.com/million.green.entities"
                 target="_blank"
                 class="social-link"
                 aria-label="Instagram"
@@ -564,7 +564,7 @@
                 </svg>
               </a>
               <a
-                href="https://www.facebook.com/milion.green.entitie/"
+                href="https://www.facebook.com/million.green.entitie"
                 target="_blank"
                 class="social-link"
                 aria-label="Facebook"
@@ -581,7 +581,7 @@
                 </svg>
               </a>
               <a
-                href="https://www.linkedin.com/company/milion-green-entities/"
+                href="https://www.linkedin.com/company/million-green-entities"
                 target="_blank"
                 class="social-link"
                 aria-label="LinkedIn"
