Add Open Graph and Twitter Card meta tags, favicon links, and additional meta tags to contact, index, and initiative pages for improved SEO and social media sharing

--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,54 @@
       content="One Million Green Entities, green entities, sustainable, social projects, immigrants, digital platform, sustainability, social responsibility"
     />
     <title>Contact Us - One Million Green Entities</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="apple-touch-icon" href="images/favicon.ico" />
+
+    <!-- Open Graph Meta Tags for Social Media and Search -->
+    <meta
+      property="og:title"
+      content="Contact Us - One Million Green Entities"
+    />
+    <meta
+      property="og:description"
+      content="Join One Million Green Entities - Connect with environmentally conscious organizations worldwide. Purchase 1000-pixel cells for €25 to showcase your green business and support immigrant social projects."
+    />
+    <meta
+      property="og:image"
+      content="https://onemilliongreenentities.com/images/favicon.ico"
+    />
+    <meta
+      property="og:url"
+      content="https://onemilliongreenentities.com/contact.html"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="One Million Green Entities" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Contact Us - One Million Green Entities"
+    />
+    <meta
+      name="twitter:description"
+      content="Join One Million Green Entities - Connect with environmentally conscious organizations worldwide. Purchase 1000-pixel cells for €25 to showcase your green business and support immigrant social projects."
+    />
+    <meta
+      name="twitter:image"
+      content="https://onemilliongreenentities.com/images/favicon.ico"
+    />
+
+    <!-- Additional Meta Tags -->
+    <meta name="author" content="One Million Green Entities" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#2d5016" />
+
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="contact.css" />
-    <link rel="icon" href="images/favicon.ico" />
   </head>
   <body>
     <!-- Navigation -->
