Add Open Graph and Twitter Card meta tags, favicon links, and additional meta tags to contact, index, and initiative pages for improved SEO and social media sharing

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     />
     <meta
       property="og:image"
-      content="https://onemilliongreenentities.com/images/favicon.ico"
+      content="https://onemilliongreenentities.com/images/logo.png"
     />
     <meta
       property="og:url"
@@ -50,7 +50,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://onemilliongreenentities.com/images/favicon.ico"
+      content="https://onemilliongreenentities.com/images/logo.png"
     />
 
     <!-- Additional Meta Tags -->
