--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <meta
       property="og:image"
-      content="https://onemilliongreenentities.com/images/favicon.ico"
+      content="https://onemilliongreenentities.com/images/logo.png"
     />
     <meta property="og:url" content="https://onemilliongreenentities.com" />
     <meta property="og:type" content="website" />
@@ -41,7 +41,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://onemilliongreenentities.com/images/favicon.ico"
+      content="https://onemilliongreenentities.com/images/logo.png"
     />
 
     <!-- Additional Meta Tags -->
