Add additional meta tags for Google and JSON-LD structured data to enhance SEO and provide organization details

--- a/index.html
+++ b/index.html
@@ -49,6 +49,40 @@
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#2d5016" />
 
+    <!-- Additional meta tags for Google -->
+    <meta name="google-site-verification" content="" />
+    <meta name="msvalidate.01" content="" />
+    <link rel="canonical" href="https://onemilliongreenentities.com/" />
+
+    <!-- JSON-LD Structured Data for Google -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "One Million Green Entities",
+        "description": "Building a global network of environmentally conscious organizations. Purchase 1000-pixel cells for €25 to showcase your green business and support immigrant social projects.",
+        "url": "https://onemilliongreenentities.com",
+        "logo": "https://onemilliongreenentities.com/images/logo.png",
+        "image": "https://onemilliongreenentities.com/images/logo.png",
+        "sameAs": [
+          "https://www.instagram.com/million.green.entities",
+          "https://www.facebook.com/million.green.entitie",
+          "https://www.linkedin.com/company/million-green-entities"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "Customer Service",
+          "url": "https://onemilliongreenentities.com/contact.html"
+        },
+        "founder": {
+          "@type": "Person",
+          "name": "One Million Green Entities Founder"
+        },
+        "foundingDate": "2025",
+        "keywords": "green entities, sustainable business, environmental organizations, social impact, digital platform"
+      }
+    </script>
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
