Refactor logo implementation across contact, index, and initiative pages to use image tags instead of divs for improved accessibility and styling. Update logo image source in meta tags for consistency. Enhance CSS for brand and footer logos with hover effects and responsive sizing.

--- a/contact.html
+++ b/contact.html
@@ -68,12 +68,11 @@
         <div class="nav-brand">
           <a href="index.html" class="nav-brand-link">
             <div class="brand-logo">
-              <div class="logo-grid">
-                <div class="logo-pixel"></div>
-                <div class="logo-pixel"></div>
-                <div class="logo-pixel"></div>
-                <div class="logo-pixel"></div>
-              </div>
+              <img
+                src="images/logo.png"
+                alt="One Million Green Entities Logo"
+                class="brand-logo-img"
+              />
               <div class="brand-text">
                 <h1>One Million Green Entities</h1>
               </div>
@@ -572,12 +571,11 @@
           <!-- Brand Section -->
           <div class="footer-section footer-brand">
             <div class="footer-logo">
-              <div class="logo-grid">
-                <div class="logo-pixel"></div>
-                <div class="logo-pixel"></div>
-                <div class="logo-pixel"></div>
-                <div class="logo-pixel"></div>
-              </div>
+              <img
+                src="images/logo.png"
+                alt="One Million Green Entities Logo"
+                class="footer-logo-img"
+              />
               <div class="footer-brand-text">
                 <h3>One Million Green Entities</h3>
                 <p>Green Entities. Real Impact</p>
