--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <meta
       property="og:image"
-      content="https://onemilliongreenentities.com/images/logo.png"
+      content="https://onemilliongreenentities.com/images/logo_media.png"
     />
     <meta property="og:url" content="https://onemilliongreenentities.com" />
     <meta property="og:type" content="website" />
@@ -41,7 +41,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://onemilliongreenentities.com/images/logo.png"
+      content="https://onemilliongreenentities.com/images/logo_media.png"
     />
 
     <!-- Additional Meta Tags -->
@@ -125,12 +125,11 @@
         <div class="nav-brand">
           <a href="index.html" class="nav-brand-link">
             <div class="brand-logo">
-              <div class="logo-grid">
-                <div class="logo-pixel"></div>
-                <div class="logo-pixel"></div>
-                <div class="logo-pixel"></div>
-                <div class="logo-pixel"></div>
-              </div>
+              <img
+                src="images/logo.png"
+                alt="One Million Green Entities Logo"
+                class="brand-logo-img"
+              />
               <div class="brand-text">
                 <h1>One Million Green Entities</h1>
               </div>
@@ -203,12 +202,11 @@
           <!-- Brand Section -->
           <div class="footer-section footer-brand">
             <div class="footer-logo">
-              <div class="logo-grid">
-                <div class="logo-pixel"></div>
-                <div class="logo-pixel"></div>
-                <div class="logo-pixel"></div>
-                <div class="logo-pixel"></div>
-              </div>
+              <img
+                src="images/logo.png"
+                alt="One Million Green Entities Logo"
+                class="footer-logo-img"
+              />
               <div class="footer-brand-text">
                 <h3>One Million Green Entities</h3>
                 <p>Green Entities. Real Impact</p>
